src/objects/Apttus__ComplyCustomProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds custom properties for various context objects</description>
    <fields>
        <fullName>Apttus__ChildObjectTypes__c</fullName>
        <description>List of comma separated child object types for this business object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List of comma separated child object types for this business object</inlineHelpText>
        <label>Child Object Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocAssemblyRuleFieldSetName__c</fullName>
        <description>The API name of the doc assembly rule field set associated with the business object.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API name of the doc assembly rule field set associated with the business object.</inlineHelpText>
        <label>Doc Assembly Rule FieldSet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocAssemblyRuleStaticFieldSetName__c</fullName>
        <description>The API name of the doc assembly rule static field set associated with the business object. The list of static fields are used as pre-filters to retrieve rules associated with the rule set during the dynamic assembly process.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API name of the doc assembly rule static field set associated with the business object. The list of static fields are used as pre-filters to retrieve rules associated with the rule set during the dynamic assembly process.</inlineHelpText>
        <label>Doc Assembly Rule Static FieldSet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Comply Custom Properties</label>
</CustomObject>